# cpp-code-quest

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  index.html  package.json
assets/css/: styles.css
assets/js/: game.js
deployment/: github-pages.yml
docs/: CONCEPTS.md  DEVELOPMENT.md  GAMEPLAY.md
examples/: level1_auto.cpp  level2_lambdas.cpp  level3_smart_pointers.cpp  level4_move_semantics.cpp  level5_advanced.cpp
src/: main.cpp
src/game/: GameEngine.cpp  GameEngine.hpp  Level.cpp  Level.hpp
src/utils/: FileUtils.cpp  FileUtils.hpp  StringUtils.cpp  StringUtils.hpp
tests/: CMakeLists.txt  test_main.cpp
